# mcp-ollama

./: README.md  client.py  pyproject.toml
servers/: server.py
servers/web-search/: README.md  config.py  error.py  pyproject.toml  server.py  utils.py
