[project]
name = "web-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "html5lib>=1.1",
    "langchain>=0.3.27",
    "langchain-text-splitters>=0.3.11",
    "lxml>=6.0.1",
    "numpy>=2.3.3",
    "ollama>=0.5.4",
    "requests>=2.32.5",
]
